[gd_scene load_steps=3 format=3 uid="uid://b22uvbylswxyf"]

[ext_resource type="Script" path="res://scenes/Levels/level_scripts/choices_script.gd" id="1_4d3yy"]
[ext_resource type="FontFile" uid="uid://d2x57q70kr1ns" path="res://sprites/Fonts/Retro Gaming.ttf" id="2_aekob"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4d3yy")

[node name="PanelContainer2" type="PanelContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.2, 1.2)

[node name="ColorRect" type="ColorRect" parent="PanelContainer2"]
layout_mode = 2
color = Color(0.172833, 0.172833, 0.172833, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Label" type="Label" parent="PanelContainer2/MarginContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_aekob")
text = "How should I respond?"

[node name="PanelContainer" type="PanelContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_top = 41.0
offset_right = 187.0
offset_bottom = 127.0

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.172833, 0.172833, 0.172833, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Choice1" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_aekob")
text = "option"

[node name="Choice3" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_aekob")
text = "option"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Choice2" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_aekob")
text = "option 2"

[node name="Choice4" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_aekob")
text = "option"
